# lab-manager

./: .dockerignore  .env.example  .env.production.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.test  MANIFEST.in  PROGRESS.md  README.md  SECURITY.md  TODOS.md  alembic.ini  docker-compose.scalable.yml  docker-compose.test.yml  docker-compose.yml  litellm_config.yaml  pyproject.toml
.do/: app.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml  labeler.yml  merge-gate.yml  publish.yml  release.yml  security.yml  stale.yml
.stitch/: DESIGN.md
.stitch/designs/: dashboard.html  documents.html  inventory.html  login.html  orders.html  review.html  setup.html  upload.html
alembic/: env.py
alembic/versions/: 0c2125df7c3a_merge_heads.py  15e78dfeed79_add_staff_role_equipment_status_checks.py  4046478f7b78_add_processing_status.py  4266dbc78c53_add_usage_events_table.py  4ecede3a6f58_add_equipment_table.py  656b400b42d2_initial_schema.py  9a1c1db54919_merge_heads.py  9b2c4d6e8f10_add_equipment_estimated_value_check.py  a1b2c3d4e5f6_add_api_usage_events.py  a1b2c3d4e5f6_add_documents_vendor_name_index.py  a1b2c3d4e5f6_add_password_hash_to_staff.py  a1b2c3d4e5f6_add_processing_status.py  a2b3c4d5e6f7_add_rbac_location_hierarchy.py  a2b3c4d5e6f7_add_rbac_roles.py  a3b4c5d6e7f8_add_unresolved_alert_unique_index.py  aa12d2df8f01_add_inventory_lifecycle.py  b1c2d3e4f5a6_add_order_requests_table.py  b2c3d4e5f6a7_add_notifications_tables.py  b2c3d4e5f6a7_add_processing_status.py  (+12 more)
deploy/: README.md  install.sh
docker/: Caddyfile  entrypoint.sh  init-readonly-user.sh  init-readonly-user.sql  prometheus.yml
docs/: COVERAGE.md  PAGES.md  PRODUCT.md  TRACEABILITY.md  ai-native-document-rag-research-2025-2026.md  audit_analysis_report.md  audit_log.json  audit_summary.json  benchmark-spec.md  competitor-analysis-2026Q1.md  comprehensive-research-report.md  deployment-saas-analysis.md  full-audit-report.md  lims-market-research-2025-2026.md  mcp-config.json  model-shortlist.md  pipeline-results-summary.md  platform-support-analysis.md  professional-ocr-report.md  tailscale-device-tutorial.md  typescript-migration-evaluation.md
docs/specs/: README.md  login.md  (+14 more)
ocr-benchmark/: README.md
paper/: manuscript.tex  references.bib
scripts/: backup_db.sh  batch_ingest.py  bootstrap_env.sh  bootstrap_local_env.sh  build_audit_log.py  bulk_upload.sh  deploy.sh  extract_equipment.py  fix_staff_duplicates.py  fix_staff_duplicates_round2.py  fix_vendor_duplicates.py  full_benchmark.py  health_check.sh  improve_database.py  index_meilisearch.py  load_ocr_results.py  normalize_existing_vendors.py  ocr_benchmark.py  oracle.sh  pipeline_v2.py  populate_db.py  process_scans.py  reextract_remaining.py  restore_backup.sh  run_full_pipeline.py  run_ocr_benchmark.py  run_release_gate.sh  seed_digital_staff.py  seed_vendors.py  set_staff_password.py  setup_backup_cron.sh  sync_gpu_server.sh  test_rag.py  visual-diff.mjs
tests/: conftest.py  test_alembic_migration_chain.py  test_alert_dedup.py  test_alert_recreate_fix.py  test_alerts.py  test_alerts_service_unit.py  test_analytics.py  test_analytics_service.py  test_analytics_service_unit.py  test_api_crud.py  test_api_schema_decimals.py  test_api_security.py  test_api_validation.py  test_api_vendors.py  test_app_coverage.py  test_audit.py  test_audit_service.py  test_audit_service_deep.py  test_auth.py  test_auth_middleware_unit.py  test_barcode.py  test_barcode_api.py  test_barcode_unit.py  test_batch_import.py  test_bootstrap_local_env.py  test_bulk_import.py  test_chat_api.py  test_chat_ask_unit.py  test_cli_tools.py  test_config.py  test_config_defaults.py  test_config_edge_cases.py  test_config_settings_unit.py  test_consensus.py  test_consumption.py  test_consumption_forecast.py  test_core_coverage_boost.py  test_cost_tracker.py  test_coverage_final.py  test_coverage_gaps.py  (+148 more)
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+451 files in other folders)
